Fix margin of card-panel

--- a/budget/static/css/styles.css
+++ b/budget/static/css/styles.css
@@ -17,15 +17,18 @@ h1, h6 {
 
 	font-weight: bold;
 	
+	}
 
-/*	}
 .row {
 
 	margin : 0!important;
 }
-*/
 
-
+.card-panel {
+    margin-top: 0!important; 
+    margin-bottom: 0!important; 
+    
+}
 /*project_list (noproject) */
 
 .noproject-wrapper {
