--- a/budget/static/css/styles.css
+++ b/budget/static/css/styles.css
@@ -50,6 +50,17 @@ h1, h6 {
 }
 
 
+/* project add view */
+
+form ul li.category {
+	display: inline-block;
+	background-color: white;
+	padding: 5px 10px;
+	margin-right: 5px;
+	
+}
+
+
 /*project detail stats */
  
 
